--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@ img{
   width: 100%;
 }
 
+.svg-rotation{
+  transform: rotate(180deg);
+  height: 200px;
+
+}
+
 .flex-container{
   display: flex;
 }
@@ -127,55 +133,75 @@ img{
 /* MAIN */
 .section-color{
 
-  /* test */
   background-color: white;
-  padding: 30px 0;
+  padding: 50px 0;
 }
 
 .section-color2{
 
-  /* test */
-  background-color: #d3d3d3;
-  padding: 30px 0;
+  background-color: #f6f6f6;
+  padding: 50px 0;
 }
 
 .section-color3{
 
-  /* test */
   background-color: #23272a;
   padding: 10px 0 30px 0;
 }
 
 /* CONTENT SECTION */
+/* Section content 1 */
+.section img{
+  width: 700px;
+}
+.section h2{
+  padding: 40px 0px 20px 0;
+  font-size: 40px;
+}
+.section p{
+  padding: 15px 0;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.section{
+  justify-content: space-between;
+}
+
+/* section 2 */
+.section2{
+  text-align: center;
+}
+.section2 h2{
+  padding: 40px 0px 15px 0;
+  font-size: 40px;
+}
+
+.section-color2 p{
+  padding: 15px 0;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.text-bg{
+  font-size: 28px;
+  background: url(../img/stars.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 35;
+  padding: 40px 5px;
+  font-weight: 700;
+}
+
+.downlod-button2{
+
+  color: white;
+  background-color: #7189da;
+  font-size: 16px;
+}
 .content-box{
   display: flex;
   width: 70%;
-  border: 1px dashed black;
-}
-.content1{
-
-  /* test */
-  height: 390px;
-  width: 60%;
-  background-color: #1d90ff;
-  border: 1px dashed black;
-}
-
-.content2{
-
-  /* test */
-  height: 390px;
-  width: 40%;
-  background-color: #ffbfcb;
-  border: 1px dashed black;
-}
-
-.content3{
-
-  /* test */
-  height: 650px;
-  width: 100%;
-  background-color: #238b21;
   border: 1px dashed black;
 }
 
