--- a/css/style.css
+++ b/css/style.css
@@ -199,28 +199,30 @@ img{
   background-color: #7189da;
   font-size: 16px;
 }
-.content-box{
+/* .content-box{
   display: flex;
   width: 70%;
   border: 1px dashed black;
 }
+*/
 
-.content4{
 
-  /* test */
-  height: 390px;
-  width: 30%;
-  background-color: #f08080;
-  border: 1px dashed black;
+/* FOOTER */
+.main-footer{
+  list-style-type: none;
+  color: #7089da;
+  font-size: 20px;
+   
 }
-
-.content5{
-
-  /* test */
-  height: 100%;
-  width: 25%;
-  background-color: #20b2aa;
-  border: 1px dashed white;
+.main-footer li{
+  padding: 8px 0;
+}
+.main-footer img{
+  width: 15%;
+  display: inline-block;
+}
+.main-footer span{
+  font-size: 15px;
 }
 
 /* HR */
@@ -228,7 +230,6 @@ hr{
   border: 1px solid #838485;
 }
 
-/* FOOTER */
 .footer-section-color{
   
   /* test */
