--- a/css/style.css
+++ b/css/style.css
@@ -215,9 +215,14 @@ img{
   display: inline-block;
 }
 .main-footer span{
-  font-size: 15px;
+  font-size: 16px;
   color: white;
+  display: inline-block;
   vertical-align: middle;
+  text-align: center;
+  line-height: 16px;
+  width: 50px;
+  height: 25px;
 }
 .main-footer i{
   color: white;
