--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ img{
   padding: 8px 12px;
   color: black;
   font-size: 14px;
+  display: inline-block;
 }
 
 /* HEADER BOTTOM */
@@ -187,7 +188,6 @@ img{
   background: url(../img/stars.svg);
   background-repeat: no-repeat;
   background-position: top;
-  background-size: 35;
   padding: 40px 5px;
   font-weight: 700;
 }
